feat: Added splash screen
Nothing special, just so it's there

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <style name="Theme.SocialDealDemo.Splash" parent="Theme.SplashScreen.IconBackground">
+        <item name="windowSplashScreenBackground">#FFFFFF</item>
+        <item name="postSplashScreenTheme">@style/Theme.SocialDealDemo</item>
+    </style>
     <style name="Theme.SocialDealDemo" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
